--- a/front/app/components/Endorsment/style.scss
+++ b/front/app/components/Endorsment/style.scss
@@ -7,3 +7,25 @@
 .button.tbp-radio.removeendorsment {
   background-color: $primary-4;
 }
+
+.field {
+  .subtitle.vde-loadmore {
+    color: $dark;
+  }
+}
+
+.vde.child.neweval {
+  .card-header.level.is-mobile {
+    .level-left {
+      .subtitle-modal {
+
+      }
+    }
+    .level-right {
+
+    }
+  }
+  .explanation {
+
+  }
+}
