--- a/front/app/containers/NavBar/style.scss
+++ b/front/app/containers/NavBar/style.scss
@@ -7,7 +7,7 @@ div.section.vde-navbar {
   top: 0;
   z-index:10;
   height: $navsize;
-  background-color: $primary-5;
+  background-color: $light;
   width: 100%;
   padding: 1.5rem 0;
   margin-bottom: 1rem;
