--- a/front/app/containers/pages/User/style.scss
+++ b/front/app/containers/pages/User/style.scss
@@ -1,4 +1,9 @@
+@import "../../../styles/theme.scss";
 
 .subtitle.user:not(:last-child) {
   margin-bottom: 1rem;
+}
+
+.hero.subject {
+  background-color: $primary-3
 }
