--- a/front/app/components/Buttons/style.scss
+++ b/front/app/components/Buttons/style.scss
@@ -61,7 +61,9 @@
 }
 
 .creating-button.level.trash {
-  background-color: $light;
+  background-color: transparent;
+  border-style: solid;
+  border-width: thin;
   color: $dark;
   padding: 0.4rem;
 }
