--- a/front/app/styles/cards.scss
+++ b/front/app/styles/cards.scss
@@ -12,6 +12,10 @@
   background-color: $primary-4;
 }
 
+.vde.child.new-item {
+  background-color: $primary-4;
+}
+
 .card.results-section,
 .vde.child.result {
   background-color: $primary-3;
