--- a/front/app/components/List/style.scss
+++ b/front/app/components/List/style.scss
@@ -1,6 +1,10 @@
 @import "../../styles/theme.scss";
 
 
+.vde-list {
+  width: 100%;
+}
+
 .vde-loadmore.subtitle {
   color: $light;
   text-align: left;
