--- a/front/app/components/Rating/style.scss
+++ b/front/app/components/Rating/style.scss
@@ -22,6 +22,7 @@ p.subtitle.is-narrow.show-more {
   margin-bottom: 0;
   position: relative;
   left: calc(50% - 5rem);
+  width: 50%;
 }
 
 .level.is-mobile.show-children:hover {
