--- a/front/app/styles/global-styles.scss
+++ b/front/app/styles/global-styles.scss
@@ -13,7 +13,7 @@ body.fontLoaded {
 }
 
 #app {
-  background-color: $dark;
+  background-color: hsl(198, 0%, 21%);
   color: $dark;
   min-height: 100%;
   min-width: 100%;
