--- a/front/app/containers/NavBar/style.scss
+++ b/front/app/containers/NavBar/style.scss
@@ -9,8 +9,8 @@ div.section.vde-navbar {
   height: $navsize;
   background-color: $light;
   width: 100%;
-  padding: 1.5rem 0;
-  margin-bottom: 1rem;
+  height: fit-content;
+  padding: 0;
 }
 
 .vde.navbar.menu {
@@ -46,7 +46,6 @@ ul {
 
 div.container.vde-navbar {
   position: relative;
-  height: 100%;
   width: 100%;
   padding: 0;
 }
@@ -54,6 +53,7 @@ div.container.vde-navbar {
 div.level.vde-navbar {
   height: 100%;
   width: 100%;
+  margin: 0;
 }
 
 .navbar-nav {
