--- a/front/app/containers/Breadcrumb/style.scss
+++ b/front/app/containers/Breadcrumb/style.scss
@@ -3,7 +3,8 @@
 
 .breadcrumb {
   background-color: $light;
-  padding: 0.4rem;
+  padding-bottom: 0.4rem;
+  padding-left: 0.4rem;
  }
 
 .container.vde-breadcrumb {
