--- a/front/app/styles/cards.scss
+++ b/front/app/styles/cards.scss
@@ -35,10 +35,6 @@
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
   }
-  .vde.child.reason {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
 
   .card-header.level.is-mobile {
     min-height: 5rem;
@@ -103,6 +99,7 @@
 
 li.vde.child.reason {
   background-color: lighten($primary-4, 5%);
+  border-radius: 0;
   .card-header {
     border-style: groove;
     border-bottom: 0;
