--- a/front/app/containers/NavBar/style.scss
+++ b/front/app/containers/NavBar/style.scss
@@ -6,7 +6,7 @@ div.section.vde-navbar {
   position: fixed;
   top: 0;
   z-index:10;
-  height: $navsize;
+  height: auto;
   background-color: $light;
   width: 100%;
   height: fit-content;
@@ -46,12 +46,13 @@ ul {
 
 div.container.vde-navbar {
   position: relative;
+  height: auto;
   width: 100%;
   padding: 0;
 }
 
 div.level.vde-navbar {
-  height: 100%;
+  height: auto;
   width: 100%;
   margin: 0;
   margin-bottom: -10px;
@@ -59,7 +60,7 @@ div.level.vde-navbar {
 
 .navbar-nav {
   max-width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   justify-content: flex-end;
 }
