add tutorial messages

--- a/front/app/components/Buttons/style.scss
+++ b/front/app/components/Buttons/style.scss
@@ -18,6 +18,7 @@
   display: flex;
   margin-left: 1rem;
   padding: 0.4rem;
+  font-size: initial;
   color: $dark;
   border-radius: 10px;
   height: 3rem;
